build the movie app con redux

--- a/react-demo/src/css/movies.css
+++ b/react-demo/src/css/movies.css
@@ -23,6 +23,24 @@
     font-size: 0.9rem;
 }
 
+.card.fade-enter{
+    opacity: 0;
+}
+
+.card.fade-active{
+    opacity: 1;
+    transition: opacity 0.5s ease-out;
+}
+
+.card.fade-exit{
+    opacity: 1;
+}
+
+.card.fade-exit-active{
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+}
+
 .review {
     float: left;
 }
@@ -56,3 +74,4 @@
         min-height: 50px;
     }
 }
+
